--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "type": "cppbuild",
             "label": "C/C++: g++ 生成活动文件",
-            "command": "/usr/bin/g++",
+            "command": "g++",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -21,7 +21,7 @@
                 "$gcc"
             ],
             "group": "build",
-            "detail": "编译器: /usr/bin/g++"
+            "detail": "编译器: g++"
         }
     ]
 }
