--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,7 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "console": "internalConsole",
-            "preLaunchTask": "C/C++: g++ 生成活动文件"
+            "preLaunchTask": "C/C++: cl.exe 生成活动文件"
         }
     ]
 }
